...
        control={control}
        error={errors[SignInFields.password]}
        onSubmitEditing={handleOnSubmit}
      />
      <View style={styles.footerButton}>
        <CTA
          testID="sign-in-cta"
          text={t(`signIn.submitButton`)}
          accessibilityLabel={t(`signIn.submitButtonAccessibilityLabel`)}
          onPress={handleOnSubmit}
        />
      </View>
    </>
...
