...

  const renderHeaderLeft = (
    navigation: DrawerNavigationProp<DrawerParamList>,
    route: { name: string },
  ) => (
    <TouchableOpacity
      testID="drawer-menu-button"
      accessibilityLabel={t('drawerMenu.openMenu')}
      style={styles.burgerButton}
      onPress={() => navigation.toggleDrawer()}>
      <MaterialIcon
        name="menu"
        size={24}
...
