...
        }}
        onSubmitEditing={handleOnSubmit}
      />
      <Terms />
      <View style={styles.footerButton}>
        <CTA
          testID="sign-up-cta"
          text={t(`signUp.submitButton`)}
          accessibilityLabel={t(`signUp.submitButtonAccessibilityLabel`)}
          onPress={handleOnSubmit}
        />
      </View>
    </>
...
