...
      <KeyboardAvoidingView
        style={styles.keyboardAvoidingContainer}
        behavior={'padding'}
        keyboardVerticalOffset={Platform.OS === 'ios' ? 200 : 0}>
        <View style={styles.footerButton}>
          <CTA
            testID="forgot-password-cta"
            text={submitLabel}
            accessibilityLabel={submitAccessibilityLabel}
            onPress={handleOnSubmit}
          />
        </View>
      </KeyboardAvoidingView>
...
